--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d274d306",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ce8d5110",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "95bbe8cf",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "93096690",
    "metadata": {},
    "outputs": [],
@@ -92,14 +92,64 @@
     "    theta is the angle (in radians) from the positive x-axis.\n",
     "\"\"\"\n",
     "\n",
-    "def to_relative_polar(x1, y1, x2, y2):\n",
-    "    dx = x2 - x1\n",
-    "    dy = y2 - y1\n",
+    "def to_relative_polar(x1, x2):\n",
+    "    dx = x2[0] - x1[0]\n",
+    "    dy = x2[1] - x1[1]\n",
     "    \n",
-    "    r = math.sqrt(dx**2 + dy**2)      # Radial distance\n",
-    "    theta = math.atan2(dy, dx)       # Angle in radians\n",
+    "    r = np.sqrt(dx**2 + dy**2)      # Radial distance\n",
+    "    theta = np.arctan2(dy, dx)       # Angle in radians\n",
+    "\n",
+    "    polar = np.array([r, theta])\n",
     "    \n",
-    "    return (r, theta)"
+    "    return polar\n",
+    "\n",
+    "\"\"\"\n",
+    "Compute the cartesian coordinate (x1, y1) given .\n",
+    "\n",
+    "Parameters\n",
+    "----------\n",
+    "x1, y1 : float\n",
+    "    Coordinates of the reference point.\n",
+    "x2, y2 : float\n",
+    "    Coordinates of the target point.\n",
+    "\n",
+    "Returns\n",
+    "-------\n",
+    "(r, theta) : tuple of floats\n",
+    "    r is the distance from (x1, y1) to (x2, y2).\n",
+    "    theta is the angle (in radians) from the positive x-axis.\n",
+    "\"\"\"\n",
+    "\n",
+    "def to_cartesian(polar, x2):\n",
+    "    dx = x2[0] - np.sin(polar[0]) * polar[1]\n",
+    "    dy = x2[1] - np.cos(polar[0]) * polar[1]\n",
+    "\n",
+    "    x1 = np.array([dx, dy])\n",
+    "    \n",
+    "    return x1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "81bf5e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.41421356 0.78539816]\n",
+      "[0.22421044 0.87752211]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.array([0,0])\n",
+    "x2 = np.array([1,1])\n",
+    "pp = to_relative_polar(x1, x2)\n",
+    "print(pp)\n",
+    "print(to_cartesian(pp, x2))"
    ]
   },
   {
@@ -339,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
