--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -70,24 +70,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "93096690",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Compute the polar coordinates of (x2, y2) relative to (x1, y1).\n",
+    "Compute the polar coordinates of (x1, y1) relative to (x2, y2).\n",
     "\n",
     "Parameters\n",
     "----------\n",
-    "x1, y1 : float\n",
-    "    Coordinates of the reference point.\n",
-    "x2, y2 : float\n",
+    "(x1, y1) : numpy tuple of float\n",
     "    Coordinates of the target point.\n",
+    "(x2, y2) : numpy tuple of float\n",
+    "    Coordinates of the reference point.\n",
     "\n",
     "Returns\n",
     "-------\n",
-    "(r, theta) : tuple of floats\n",
+    "(r, theta) : numpy tuple of floats\n",
     "    r is the distance from (x1, y1) to (x2, y2).\n",
     "    theta is the angle (in radians) from the positive x-axis.\n",
     "\"\"\"\n",
@@ -104,25 +104,25 @@
     "    return polar\n",
     "\n",
     "\"\"\"\n",
-    "Compute the cartesian coordinate (x1, y1) given .\n",
+    "Compute the cartesian coordinate of (x1, y1) when polar coordinate and cartesian coordinate of (x2, y2) are given.\n",
     "\n",
     "Parameters\n",
     "----------\n",
-    "x1, y1 : float\n",
+    "(r, theta) : numpy tuple of floats\n",
+    "    r is the distance from (x1, y1) to (x2, y2).\n",
+    "    theta is the angle (in radians) from the positive x-axis.\n",
+    "(x2, y2) : numpy tuple of float\n",
     "    Coordinates of the reference point.\n",
-    "x2, y2 : float\n",
-    "    Coordinates of the target point.\n",
     "\n",
     "Returns\n",
     "-------\n",
-    "(r, theta) : tuple of floats\n",
-    "    r is the distance from (x1, y1) to (x2, y2).\n",
-    "    theta is the angle (in radians) from the positive x-axis.\n",
+    "(x1, y1) : numpy tuple of float\n",
+    "    Coordinates of the target point.\n",
     "\"\"\"\n",
     "\n",
     "def to_cartesian(polar, x2):\n",
-    "    dx = x2[0] - np.sin(polar[0]) * polar[1]\n",
-    "    dy = x2[1] - np.cos(polar[0]) * polar[1]\n",
+    "    dx = x2[0] + np.sin(polar[1]) * polar[0]\n",
+    "    dy = x2[1] + np.cos(polar[1]) * polar[0]\n",
     "\n",
     "    x1 = np.array([dx, dy])\n",
     "    \n",
@@ -131,25 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "81bf5e2e",
+   "execution_count": 24,
+   "id": "8a4b37d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.41421356 0.78539816]\n",
-      "[0.22421044 0.87752211]\n"
+      "Polar:  [318.127333     1.84780065]\n",
+      "X1:  [307. 318.]\n"
      ]
     }
    ],
    "source": [
-    "x1 = np.array([0,0])\n",
-    "x2 = np.array([1,1])\n",
-    "pp = to_relative_polar(x1, x2)\n",
-    "print(pp)\n",
-    "print(to_cartesian(pp, x2))"
+    "x1 = np.array([88, 99])\n",
+    "x2 = np.array([1, 405])\n",
+    "polar = to_relative_polar(x1, x2)\n",
+    "print(\"Polar: \", polar)\n",
+    "print(\"X1: \", to_cartesian(polar, x2))"
    ]
   },
   {
