--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "93096690",
    "metadata": {},
    "outputs": [],
@@ -93,8 +93,8 @@
     "\"\"\"\n",
     "\n",
     "def to_relative_polar(x1, x2):\n",
-    "    dx = x2[0] - x1[0]\n",
-    "    dy = x2[1] - x1[1]\n",
+    "    dx = x1[0] - x2[0]\n",
+    "    dy = x1[1] - x2[1]\n",
     "    \n",
     "    r = np.sqrt(dx**2 + dy**2)      # Radial distance\n",
     "    theta = np.arctan2(dy, dx)       # Angle in radians\n",
@@ -121,35 +121,12 @@
     "\"\"\"\n",
     "\n",
     "def to_cartesian(polar, x2):\n",
-    "    dx = x2[0] + np.sin(polar[1]) * polar[0]\n",
-    "    dy = x2[1] + np.cos(polar[1]) * polar[0]\n",
+    "    dx = x2[0] + np.cos(polar[1]) * polar[0]\n",
+    "    dy = x2[1] + np.sin(polar[1]) * polar[0]\n",
     "\n",
     "    x1 = np.array([dx, dy])\n",
     "    \n",
     "    return x1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "8a4b37d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Polar:  [318.127333     1.84780065]\n",
-      "X1:  [307. 318.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x1 = np.array([88, 99])\n",
-    "x2 = np.array([1, 405])\n",
-    "polar = to_relative_polar(x1, x2)\n",
-    "print(\"Polar: \", polar)\n",
-    "print(\"X1: \", to_cartesian(polar, x2))"
    ]
   },
   {
