--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial import distance as dist\n",
+    "import copy\n",
     "import simpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "d274d306",
    "metadata": {},
    "outputs": [],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "ce8d5110",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "95bbe8cf",
    "metadata": {},
    "outputs": [],
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "93096690",
    "metadata": {},
    "outputs": [],
@@ -131,7 +132,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
+   "id": "91c42c9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18. 20.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x5 = np.array([18, 20])\n",
+    "x4 = np.array([12, 20])\n",
+    "x3 = np.array([6, 10])\n",
+    "x2 = np.array([1, 5])\n",
+    "x1 = np.array([0, 0])\n",
+    "x5tox4 = to_relative_polar(x5,x4)\n",
+    "x4tox3 = to_relative_polar(x4,x3)\n",
+    "x3tox2 = to_relative_polar(x3,x2)\n",
+    "x2tox1 = to_relative_polar(x2,x1)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59caebbe",
    "metadata": {},
    "outputs": [],
@@ -169,17 +197,25 @@
     "        \"\"\"accquire the fitness of worm's current position to calculate 'influence radius'.\"\"\"\n",
     "        shifted = fitness_function(self.X) + lower_bound\n",
     "        self.score = shifted / influence_factor\n",
+    "        self.influenceDict[self.name]['score'] = self.score\n",
+    "\n",
+    "    def prepareMsgToSend(self):\n",
+    "        \"\"\"Prepare to send a portion of the influence table to neighboring AUVs\"\"\"\n",
+    "        msgInfluenceTable = copy.deepcopy(self.influenceDict)\n",
+    "        for key, value in msgInfluenceTable.items():\n",
+    "            if value['score'] < self.score:\n",
+    "                del msgInfluenceTable[key]\n",
+    "        return msgInfluenceTable\n",
     "\n",
     "    def send(self):\n",
     "        \"\"\"If worm j is within worm j's radius, record distance; else 0. For influence martrix\"\"\"\n",
     "        for glowworm in self.swarm:\n",
     "            distance =  np.linalg.norm(self.X-glowworm.X)\n",
     "            if distance <= self.transmission_range: # Changed from self.score\n",
-    "                if glowworm.name == self.name:\n",
-    "                    self.influenceDict[self.name] = {'distance':0.0, 'angle':0.0, 'score':0.0}\n",
-    "                else:\n",
+    "                if glowworm.name != self.name:\n",
     "                    polar_cor = to_relative_polar(self.X, glowworm.X)\n",
-    "                    glowworm.receive(self.name, self.score, polar_cor) \n",
+    "                    msgInfluenceTable = self.prepareMsgToSend()\n",
+    "                    glowworm.receive(self.name, msgInfluenceTable, polar_cor) \n",
     "\n",
     "    # def signalSourceLocalization(self,wormName):\n",
     "    #     \"\"\"measure the distance and angle between worm and self\"\"\"\n",
