--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "91c42c9b",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18. 20.]\n"
+      "[18. 20.]\n",
+      "[18 20]\n"
      ]
     }
    ],
@@ -154,7 +155,32 @@
     "x4tox3 = to_relative_polar(x4,x3)\n",
     "x3tox2 = to_relative_polar(x3,x2)\n",
     "x2tox1 = to_relative_polar(x2,x1)\n",
-    "print()"
+    "print(to_cartesian(x5tox4,np.array([0,0])) + to_cartesian(x4tox3,np.array([0,0])) + to_cartesian(x3tox2,np.array([0,0])) + to_cartesian(x2tox1,np.array([0,0])))\n",
+    "print(x5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "0d01134f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18. 20.]\n",
+      "[26.90724809  0.83798123]\n",
+      "[18. 20.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x5tox2 = to_relative_polar(x5,x2)\n",
+    "x5 = to_cartesian(x5tox2,x2)\n",
+    "print(x5)\n",
+    "print(to_relative_polar(x5,x1))\n",
+    "print(to_cartesian(to_relative_polar(x5,x1),np.array([0,0])))"
    ]
   },
   {
@@ -181,7 +207,7 @@
     "        self.V = np.random.randn(2) * 0.1\n",
     "        #self.nextWaypoint = X\n",
     "        self.score = score # for transmisstion distance\n",
-    "        self.influenceDict = {name: {'distance':0.0, 'angle':0.0, 'score':0.0}} # name: distance, angle, score\n",
+    "        self.influenceTable = {name: {'distance':0.0, 'angle':0.0, 'score':0.0}} # name: distance, angle, score\n",
     "\n",
     "        self.positions = [self.X.copy()]\n",
     "        self.process = env.process(self.run())\n",
@@ -197,13 +223,13 @@
     "        \"\"\"accquire the fitness of worm's current position to calculate 'influence radius'.\"\"\"\n",
     "        shifted = fitness_function(self.X) + lower_bound\n",
     "        self.score = shifted / influence_factor\n",
-    "        self.influenceDict[self.name]['score'] = self.score\n",
+    "        self.influenceTable[self.name]['score'] = self.score\n",
     "\n",
     "    def prepareMsgToSend(self):\n",
     "        \"\"\"Prepare to send a portion of the influence table to neighboring AUVs\"\"\"\n",
-    "        msgInfluenceTable = copy.deepcopy(self.influenceDict)\n",
+    "        msgInfluenceTable = copy.deepcopy(self.influenceTable)\n",
     "        for key, value in msgInfluenceTable.items():\n",
-    "            if value['score'] < self.score:\n",
+    "            if value['score'] < self.score: # only send the entries with higher score than self\n",
     "                del msgInfluenceTable[key]\n",
     "        return msgInfluenceTable\n",
     "\n",
@@ -227,18 +253,18 @@
     "    #     return to_relative_polar(wormPosition, self.X)\n",
     "\n",
     "    def receive(self, worm_name, worm_score, polar_cor):\n",
-    "        \"\"\"update the influenceDict\"\"\"\n",
-    "        self.influenceDict[worm_name] = {'distance':polar_cor[0], 'angle':polar_cor[1], 'score':worm_score}\n",
+    "        \"\"\"update the influenceTable\"\"\"\n",
+    "        self.influenceTable[worm_name] = {'distance':polar_cor[0], 'angle':polar_cor[1], 'score':worm_score}\n",
     "\n",
     "    def update(self):\n",
-    "        \"\"\"Update each worm's position based on the dict of influences.\"\"\"\n",
+    "        \"\"\"Update each worm's position based on the Table of influences.\"\"\"\n",
     "        new_position = np.array([0.0, 0.0])\n",
     "        x_move = 0.0\n",
     "        y_move = 0.0\n",
-    "        for glowworm_name in self.influenceDict:\n",
-    "            glowworm_score = self.influenceDict[glowworm_name]['score']\n",
-    "            glowworm_angle = self.influenceDict[glowworm_name]['angle']\n",
-    "            glowworm_distance = self.influenceDict[glowworm_name]['distance']\n",
+    "        for glowworm_name in self.influenceTable:\n",
+    "            glowworm_score = self.influenceTable[glowworm_name]['score']\n",
+    "            glowworm_angle = self.influenceTable[glowworm_name]['angle']\n",
+    "            glowworm_distance = self.influenceTable[glowworm_name]['distance']\n",
     "            if glowworm_distance != 0 and self.score < glowworm_score:\n",
     "                percent_move = 1 - ((glowworm_distance/100) / glowworm_score)\n",
     "                # x_move += (glowworm.X[0] - self.X[0]) * percent_move / 10\n",
@@ -263,7 +289,15 @@
     "\n",
     "    def move(self):\n",
     "        direction = self.waypoint-self.X\n",
-    "        self.X = self.X + self.speed * (direction / np.linalg.norm(direction))\n",
+    "        newPosition = self.X + self.speed * (direction / np.linalg.norm(direction))\n",
+    "        for key, value in self.influenceTable.items():\n",
+    "            if key != self.name:\n",
+    "                prevPolar = np.array([value['distance'],value['angle']])\n",
+    "                nerghborX = to_cartesian(prevPolar,self.X)\n",
+    "                newPolar = to_relative_polar(nerghborX,newPosition)\n",
+    "                self.influenceTable[key]['distance'] = newPolar[0]\n",
+    "                self.influenceTable[key]['angle'] = newPolar[1]\n",
+    "        self.X = newPosition\n",
     "        distance = np.linalg.norm(self.X - self.waypoint) # Euclidean distance\n",
     "        if distance <= 3:  # Interaction threshold\n",
     "            self.update()\n",
