--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "id": "59caebbe",
    "metadata": {},
    "outputs": [],
@@ -288,6 +288,7 @@
     "\n",
     "    def nextWaypoint(self): \n",
     "        \"\"\"Calculate the worm's next waypoint based on the Table of influences.\"\"\"\n",
+    "        \"\"\"Choose the best worm\"\"\"\n",
     "        new_position = np.array([0.0, 0.0])\n",
     "        potentialWormList = []\n",
     "        scoreDiffList = []\n",
