--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -251,8 +251,9 @@
     "                self.influenceTable[tableEntry_name] = {'distance':tableEntrytoSelf[0], 'angle':tableEntrytoSelf[1], 'score':tableEntry_score}\n",
     "            \n",
     "\n",
-    "    # def nextWaypoint(self): # Based on random neibor selection\n",
+    "    # def nextWaypoint(self):\n",
     "    #     \"\"\"Calculate the worm's next waypoint based on the Table of influences.\"\"\"\n",
+    "    #     \"\"\"Weighted Randomly select the worm from a group\"\"\"\n",
     "    #     new_position = np.array([0.0, 0.0])\n",
     "    #     potentialWormList = []\n",
     "    #     scoreDiffList = []\n",
