--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -227,7 +227,7 @@
     "        return msgInfluenceTable\n",
     "\n",
     "\n",
-    "    def send(self):\n",
+    "    def broadcast(self):\n",
     "        \"\"\"If worm j is within worm j's radius, record distance; else 0. For influence martrix\"\"\"\n",
     "        for glowworm in self.swarm:\n",
     "            distance =  np.linalg.norm(self.X-glowworm.X)\n",
@@ -356,7 +356,7 @@
     "            # Compute glowworm logic\n",
     "            self.sensing()\n",
     "            if i%5 == 0:\n",
-    "                self.send()\n",
+    "                self.broadcast()\n",
     "            self.move()\n",
     "\n",
     "            # Store positions for later analysis or plotting\n",
