--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import simpy\n",
-    "import random"
+    "import random\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "d274d306",
    "metadata": {},
    "outputs": [],
