glowwarm sim update

--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "d274d306",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
     "##############################################################################\n",
     "# GSO PARAMETERS \n",
     "##############################################################################\n",
-    "dims = 1000\n",
+    "dims = 1000.0\n",
     "nturns = 2000\n",
     "max_jitter = 0.2"
    ]
@@ -446,14 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "ddd906e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def starting_points(num_worms):\n",
-    "#     \"\"\"Initialize the worm positions randomly.\"\"\"\n",
-    "#     return np.random.rand(num_worms, 2) * dims\n",
+    "def starting_points_random(num_worms):\n",
+    "    \"\"\"Initialize the worm positions randomly.\"\"\"\n",
+    "    return np.random.rand(num_worms, 2) * dims\n",
     "\n",
     "def starting_points(num_worms):\n",
     "    \"\"\"Evenly distribute particles on a grid within the search space.\"\"\"\n",
@@ -474,7 +474,178 @@
     "        grid_position = np.array([x_coords[col], y_coords[row]])  # Assign grid position\n",
     "        list_glowworm.append(grid_position)\n",
     "    \n",
-    "    return np.array(list_glowworm)"
+    "    return np.array(list_glowworm)\n",
+    "\n",
+    "def starting_points_spiral(num_nodes: int):\n",
+    "    \"\"\"\n",
+    "    Calculates and plots the positions of n nodes on an Archimedean spiral.\n",
+    "\n",
+    "    The spiral is centered in a square area and scaled to fit within its\n",
+    "    boundaries.\n",
+    "\n",
+    "    Args:\n",
+    "        num_nodes (int): The total number of nodes (AUVs) to plot.\n",
+    "    \"\"\"\n",
+    "    # --- 1. Define Spiral Parameters ---\n",
+    "    # The spiral is centered at (0,0), so the max radius is half the side length.\n",
+    "    max_radius = dims * 0.45\n",
+    "    \n",
+    "    # We define the spiral's \"tightness\" by the number of full rotations.\n",
+    "    # More rotations create a denser spiral.\n",
+    "    num_rotations = 10 \n",
+    "    \n",
+    "    # Determine the spiral constant 'a' which controls the distance between arms.\n",
+    "    # The formula is R = a * theta. We want R=max_radius at theta_max.\n",
+    "    theta_max = num_rotations * 2 * np.pi\n",
+    "    a = max_radius / theta_max\n",
+    "    \n",
+    "    # --- 2. Calculate Node Positions ---\n",
+    "    # Create an array of angles, one for each node, from 0 to theta_max.\n",
+    "    theta = np.linspace(0, theta_max, num_nodes)\n",
+    "    \n",
+    "    # Calculate the radius for each node based on its angle.\n",
+    "    R = a * theta\n",
+    "    \n",
+    "    # Convert from polar coordinates (R, theta) to Cartesian (x, y).\n",
+    "    x_coords = R * np.cos(theta) + dims/2\n",
+    "    y_coords = R * np.sin(theta) + dims/2\n",
+    "\n",
+    "    return np.stack((x_coords, y_coords), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "24b8ccdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100., 100.],\n",
+       "       [300., 100.],\n",
+       "       [500., 100.],\n",
+       "       [700., 100.],\n",
+       "       [900., 100.],\n",
+       "       [100., 300.],\n",
+       "       [300., 300.],\n",
+       "       [500., 300.],\n",
+       "       [700., 300.],\n",
+       "       [900., 300.],\n",
+       "       [100., 500.],\n",
+       "       [300., 500.],\n",
+       "       [500., 500.],\n",
+       "       [700., 500.],\n",
+       "       [900., 500.],\n",
+       "       [100., 700.],\n",
+       "       [300., 700.],\n",
+       "       [500., 700.],\n",
+       "       [700., 700.],\n",
+       "       [900., 700.],\n",
+       "       [100., 900.],\n",
+       "       [300., 900.],\n",
+       "       [500., 900.],\n",
+       "       [700., 900.],\n",
+       "       [900., 900.]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starting_points(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb5cc5f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[511.48105786, 299.6726687 ],\n",
+       "       [446.23750612, 967.81513301],\n",
+       "       [928.92959214, 442.15190347],\n",
+       "       [629.00867575, 203.8546838 ],\n",
+       "       [949.58330951, 545.25781282],\n",
+       "       [597.20508774, 692.34386603],\n",
+       "       [580.75575299, 491.90040303],\n",
+       "       [765.80558696, 812.64054894],\n",
+       "       [264.49514394, 722.58624481],\n",
+       "       [587.7594304 , 761.98748293],\n",
+       "       [836.1189048 , 467.22814467],\n",
+       "       [747.00918332, 580.0334813 ],\n",
+       "       [479.50249989, 945.43323341],\n",
+       "       [761.92122957,  21.99237456],\n",
+       "       [133.65607797, 238.04242203],\n",
+       "       [217.46289635, 566.86453219],\n",
+       "       [ 92.07617062, 282.50224077],\n",
+       "       [444.74724656, 959.87036733],\n",
+       "       [100.32489103, 520.86208975],\n",
+       "       [371.06880975, 294.84666674],\n",
+       "       [920.2487388 , 468.84818673],\n",
+       "       [859.02726035, 766.27303093],\n",
+       "       [302.48616603,  34.04234801],\n",
+       "       [ 96.72822406, 373.61307444],\n",
+       "       [515.69874061, 955.72528829]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starting_points_random(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "64b8419f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[500.        , 500.        ],\n",
+       "       [483.76202368, 509.375     ],\n",
+       "       [518.75      , 467.52404736],\n",
+       "       [500.        , 556.25      ],\n",
+       "       [462.5       , 435.04809472],\n",
+       "       [581.1898816 , 546.875     ],\n",
+       "       [387.5       , 500.        ],\n",
+       "       [613.66583425, 434.375     ],\n",
+       "       [425.        , 629.90381057],\n",
+       "       [500.        , 331.25      ],\n",
+       "       [593.75      , 662.37976321],\n",
+       "       [321.38226047, 396.875     ],\n",
+       "       [725.        , 500.        ],\n",
+       "       [288.90630783, 621.875     ],\n",
+       "       [631.25      , 272.66833151],\n",
+       "       [500.        , 781.25      ],\n",
+       "       [350.        , 240.19237886],\n",
+       "       [776.04559746, 659.375     ],\n",
+       "       [162.5       , 500.        ],\n",
+       "       [808.5215501 , 321.875     ],\n",
+       "       [312.5       , 824.75952642],\n",
+       "       [500.        , 106.25      ],\n",
+       "       [706.25      , 857.23547906],\n",
+       "       [126.52654462, 284.375     ],\n",
+       "       [950.        , 500.        ]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starting_points_spiral(25)"
    ]
   },
   {
