--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,63 @@
     "import matplotlib.pyplot as plt\n",
     "import simpy\n",
     "import random\n",
-    "import multiprocessing"
+    "import multiprocessing\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf69fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def locating_error(point1,point2, a):\n",
+    "    \"\"\"\n",
+    "    Generates a new random point (x2', y2') within a circle.\n",
+    "\n",
+    "    The circle's central point is (x2, y2).\n",
+    "    The radius of the circle is a * distance((x1, y1), (x2, y2)).\n",
+    "\n",
+    "    Args:\n",
+    "        x1 (float): The x-coordinate of the first point.\n",
+    "        y1 (float): The y-coordinate of the first point.\n",
+    "        x2 (float): The x-coordinate of the circle's center.\n",
+    "        y2 (float): The y-coordinate of the circle's center.\n",
+    "        a (float): A scaling factor for the radius.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple[float, float]: A new point (x2', y2') randomly generated within the circle.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    x1 = point1[0]\n",
+    "    y1 = point1[1]\n",
+    "    x2 = point2[0]\n",
+    "    y2 = point2[1]\n",
+    "\n",
+    "    # Step 1: Calculate the distance between the two original points.\n",
+    "    distance = math.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
+    "\n",
+    "    # Step 2: Calculate the radius of the circle.\n",
+    "    radius = a * distance\n",
+    "\n",
+    "    # Step 3: Generate a random distance from the center and a random angle.\n",
+    "    # To get a uniform distribution of points across the circle's area,\n",
+    "    # the random distance 'r' must be proportional to the square root of a uniform random number.\n",
+    "    r = radius * math.sqrt(random.uniform(0, 1))\n",
+    "\n",
+    "    # Generate a random angle in radians between 0 and 2*pi.\n",
+    "    theta = random.uniform(0, 2 * math.pi)\n",
+    "\n",
+    "    # Step 4: Calculate the offset from the center (x2, y2) using polar coordinates.\n",
+    "    offset_x = r * math.cos(theta)\n",
+    "    offset_y = r * math.sin(theta)\n",
+    "\n",
+    "    # Step 5: Calculate the final coordinates of the new point.\n",
+    "    x_new = x2 + offset_x\n",
+    "    y_new = y2 + offset_y\n",
+    "\n",
+    "    return np.array([x_new, y_new])"
    ]
   },
   {
@@ -260,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "59caebbe",
    "metadata": {},
    "outputs": [],
@@ -270,13 +326,14 @@
     "##############################################################################\n",
     "class Glowworm:\n",
     "    def __init__(self, env, name, swarm, X=np.array([1, 1]), waypoint = np.array([1, 1]),  speed=1.5433, \n",
-    "                 transRange=190, score = 0.0):\n",
+    "                 transRange=300, locationErrorRate=0.0, score = 0.0):\n",
     "        self.env = env\n",
     "        self.name = name\n",
     "        self.swarm = swarm  # List of all particles\n",
     "        self.transmission_range = transRange\n",
     "        self.speed = speed # 0.015433 -> 3 knots\n",
     "        self.waypoint = waypoint\n",
+    "        \n",
     "\n",
     "        self.X = X\n",
     "        self.V = np.random.randn(2) * 0.1\n",
@@ -315,7 +372,8 @@
     "            distance =  np.linalg.norm(self.X-glowworm.X)\n",
     "            if distance <= self.transmission_range: # Changed from self.score\n",
     "                if glowworm.name != self.name:\n",
-    "                    polar_cor = to_relative_polar(self.X, glowworm.X)\n",
+    "                    errorPoint = locating_error(self.X,glowworm.X, self.locationErrorRate)\n",
+    "                    polar_cor = to_relative_polar(self.X, errorPoint)\n",
     "                    msgInfluenceTable = self.prepareMsgToSend()\n",
     "                    glowworm.receive(self.name, msgInfluenceTable, polar_cor) \n",
     "\n",
