--- a/FireFly-simpy.ipynb
+++ b/FireFly-simpy.ipynb
@@ -109,23 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ce8d5110",
    "metadata": {},
    "outputs": [],
    "source": [
     "##############################################################################\n",
-    "# Fitness Function \n",
+    "# Easom function based fied\n",
     "##############################################################################\n",
     "def Easom(x,y):\n",
     "    return np.cos(x) * np.cos(y) * np.exp(-((x - np.pi)**2 + (y - np.pi)**2))\n",
     "\n",
-    "# def fitness_function(xx,yy): # no false target\n",
+    "# def fitness_function(xx,yy): # one target\n",
     "#     x = xx/200 - 0.5\n",
     "#     y = yy/200 - 0.5\n",
     "#     return Easom(x,y)\n",
     "\n",
-    "# def fitness_function(xx,yy): # one false target\n",
+    "# def fitness_function(xx,yy): # two targets\n",
     "#     x1 = xx/200 - 0.5\n",
     "#     y1 = yy/200 - 0.5\n",
     "#     z1 = Easom(x1,y1)\n",
@@ -134,7 +134,7 @@
     "#     z2 = Easom(x2,y2)\n",
     "#     return z1 + 0.7 * z2\n",
     "\n",
-    "# def fitness_function(xx,yy): # two false targets\n",
+    "# def fitness_function(xx,yy): # three targets\n",
     "#     x1 = xx/200 - 0.5\n",
     "#     y1 = yy/200 - 0.5\n",
     "#     z1 = Easom(x1,y1)\n",
@@ -146,18 +146,18 @@
     "#     z3 = Easom(x3,y3)\n",
     "#     return z1 + 0.7 * z2 + 0.7 * z3\n",
     "\n",
-    "def fitness_function(xx, yy): # three false targets\n",
-    "    x1 = xx/1000 - 0.5\n",
-    "    y1 = yy/1000 - 0.5\n",
+    "def fitness_function(xx, yy): # four targets\n",
+    "    x1 = xx/200 - 0.5\n",
+    "    y1 = yy/200 - 0.5\n",
     "    z1 = Easom(x1,y1)\n",
-    "    x2 = xx/900 + 2\n",
-    "    y2 = yy/900 + 2\n",
+    "    x2 = xx/200 + 2\n",
+    "    y2 = yy/200 + 2\n",
     "    z2 = Easom(x2,y2)\n",
-    "    x3 = xx/900 + 2\n",
-    "    y3 = yy/900 - 1\n",
+    "    x3 = xx/200 + 2\n",
+    "    y3 = yy/200 - 1\n",
     "    z3 = Easom(x3,y3)\n",
-    "    x4 = xx/900 - 1\n",
-    "    y4 = yy/900 + 2\n",
+    "    x4 = xx/200 - 1\n",
+    "    y4 = yy/200 + 2\n",
     "    z4 = Easom(x4,y4)\n",
     "    return z1 + 0.7 * z2 + 0.7 * z3 + 0.7 * z4\n"
    ]
