--- a/FireFly-simpy.ipynb
+++ b/FireFly-simpy.ipynb
@@ -583,141 +583,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "24b8ccdb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[100., 100.],\n",
-       "       [300., 100.],\n",
-       "       [500., 100.],\n",
-       "       [700., 100.],\n",
-       "       [900., 100.],\n",
-       "       [100., 300.],\n",
-       "       [300., 300.],\n",
-       "       [500., 300.],\n",
-       "       [700., 300.],\n",
-       "       [900., 300.],\n",
-       "       [100., 500.],\n",
-       "       [300., 500.],\n",
-       "       [500., 500.],\n",
-       "       [700., 500.],\n",
-       "       [900., 500.],\n",
-       "       [100., 700.],\n",
-       "       [300., 700.],\n",
-       "       [500., 700.],\n",
-       "       [700., 700.],\n",
-       "       [900., 700.],\n",
-       "       [100., 900.],\n",
-       "       [300., 900.],\n",
-       "       [500., 900.],\n",
-       "       [700., 900.],\n",
-       "       [900., 900.]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "starting_points(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "eb5cc5f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[511.48105786, 299.6726687 ],\n",
-       "       [446.23750612, 967.81513301],\n",
-       "       [928.92959214, 442.15190347],\n",
-       "       [629.00867575, 203.8546838 ],\n",
-       "       [949.58330951, 545.25781282],\n",
-       "       [597.20508774, 692.34386603],\n",
-       "       [580.75575299, 491.90040303],\n",
-       "       [765.80558696, 812.64054894],\n",
-       "       [264.49514394, 722.58624481],\n",
-       "       [587.7594304 , 761.98748293],\n",
-       "       [836.1189048 , 467.22814467],\n",
-       "       [747.00918332, 580.0334813 ],\n",
-       "       [479.50249989, 945.43323341],\n",
-       "       [761.92122957,  21.99237456],\n",
-       "       [133.65607797, 238.04242203],\n",
-       "       [217.46289635, 566.86453219],\n",
-       "       [ 92.07617062, 282.50224077],\n",
-       "       [444.74724656, 959.87036733],\n",
-       "       [100.32489103, 520.86208975],\n",
-       "       [371.06880975, 294.84666674],\n",
-       "       [920.2487388 , 468.84818673],\n",
-       "       [859.02726035, 766.27303093],\n",
-       "       [302.48616603,  34.04234801],\n",
-       "       [ 96.72822406, 373.61307444],\n",
-       "       [515.69874061, 955.72528829]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "starting_points_random(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "64b8419f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[500.        , 500.        ],\n",
-       "       [483.76202368, 509.375     ],\n",
-       "       [518.75      , 467.52404736],\n",
-       "       [500.        , 556.25      ],\n",
-       "       [462.5       , 435.04809472],\n",
-       "       [581.1898816 , 546.875     ],\n",
-       "       [387.5       , 500.        ],\n",
-       "       [613.66583425, 434.375     ],\n",
-       "       [425.        , 629.90381057],\n",
-       "       [500.        , 331.25      ],\n",
-       "       [593.75      , 662.37976321],\n",
-       "       [321.38226047, 396.875     ],\n",
-       "       [725.        , 500.        ],\n",
-       "       [288.90630783, 621.875     ],\n",
-       "       [631.25      , 272.66833151],\n",
-       "       [500.        , 781.25      ],\n",
-       "       [350.        , 240.19237886],\n",
-       "       [776.04559746, 659.375     ],\n",
-       "       [162.5       , 500.        ],\n",
-       "       [808.5215501 , 321.875     ],\n",
-       "       [312.5       , 824.75952642],\n",
-       "       [500.        , 106.25      ],\n",
-       "       [706.25      , 857.23547906],\n",
-       "       [126.52654462, 284.375     ],\n",
-       "       [950.        , 500.        ]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "starting_points_spiral(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "id": "3cabac0a",
    "metadata": {},
@@ -778,52 +643,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "186f83e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def worker_function(AUVnum=25,transmissionRange=200):\n",
-    "    # Perform CPU-bound computation on 'data'\n",
-    "    AggregatePercentageList = []\n",
-    "    AggregateDurationList = []\n",
-    "    roundOfSimulation = 10\n",
-    "    for i in range(roundOfSimulation):\n",
-    "        all_positions,AUVpercentage,sim_duration = run_gso_simpy(AUVnum,transmissionRange)\n",
-    "        AggregatePercentageList.append(AUVpercentage)\n",
-    "        AggregateDurationList.append(sim_duration)\n",
-    "        print(AUVpercentage, sim_duration)\n",
-    "    avgAggregatePercentage = np.mean(AggregatePercentageList)\n",
-    "    avgAggregateDuration = np.mean(AggregateDurationList)\n",
-    "    print('AUV_NUM: ',AUVnum, ' AVG %: ', avgAggregatePercentage, ' AVG Duration: ',avgAggregateDuration)\n",
-    "    return avgAggregatePercentage,avgAggregateDuration"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "45e8abc8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ##############################################################################\n",
-    "# # MAIN - multi Process\n",
-    "# ##############################################################################\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     processes = []\n",
-    "#     results = []\n",
-    "#     transmissionRange=200\n",
-    "#     numProcesses = 12\n",
-    "\n",
-    "#     for item in range(numProcesses):\n",
-    "#         AUVnum = 10 + 10*item\n",
-    "#         p = multiprocessing.Process(target=worker_function, args=(AUVnum,transmissionRange,))\n",
-    "#         processes.append(p)\n",
-    "#         p.start()\n",
-    "\n",
-    "#     for p in processes:\n",
-    "#         p.join() # Wait for processes to complete\n",
-    "#         # In a real scenario, you'd use queues or pipes to get results back"
+    "##############################################################################\n",
+    "# MAIN - multi Process\n",
+    "##############################################################################\n",
+    "if __name__ == \"__main__\":\n",
+    "    processes = []\n",
+    "    results = []\n",
+    "    transmissionRange=200\n",
+    "    numProcesses = 12\n",
+    "    swarm_positions,AUVnum, duration = run_gso_simpy(AUVnum=36,transmissionRange=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "186f83e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def worker_function(AUVnum=25,transmissionRange=200):\n",
+    "#     # Perform CPU-bound computation on 'data'\n",
+    "#     AggregatePercentageList = []\n",
+    "#     AggregateDurationList = []\n",
+    "#     roundOfSimulation = 10\n",
+    "#     for i in range(roundOfSimulation):\n",
+    "#         all_positions,AUVpercentage,sim_duration = run_gso_simpy(AUVnum,transmissionRange)\n",
+    "#         AggregatePercentageList.append(AUVpercentage)\n",
+    "#         AggregateDurationList.append(sim_duration)\n",
+    "#         print(AUVpercentage, sim_duration)\n",
+    "#     avgAggregatePercentage = np.mean(AggregatePercentageList)\n",
+    "#     avgAggregateDuration = np.mean(AggregateDurationList)\n",
+    "#     print('AUV_NUM: ',AUVnum, ' AVG %: ', avgAggregatePercentage, ' AVG Duration: ',avgAggregateDuration)\n",
+    "#     return avgAggregatePercentage,avgAggregateDuration"
    ]
   },
   {
@@ -833,12 +689,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":\n",
-    "    processes = []\n",
-    "    results = []\n",
-    "    transmissionRange=200\n",
-    "    numProcesses = 12\n",
-    "    p = multiprocessing.Process(target=worker_function, args=(AUVnum,transmissionRange,))"
+    "# if __name__ == \"__main__\":\n",
+    "#     processes = []\n",
+    "#     results = []\n",
+    "#     transmissionRange=200\n",
+    "#     numProcesses = 12\n",
+    "#     p = multiprocessing.Process(target=worker_function, args=(AUVnum,transmissionRange,))"
    ]
   },
   {
